--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "generator",
     "algorithm"
   ],
-  "devDependencies": {
-    "browser-sync": "^2.8.2",
-    "browserify": "^11.0.1",
-    "gulp": "^3.9.0",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-util": "^3.0.6",
-    "lodash.assign": "^3.2.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.3.1"
-  }
+  "dependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ntalbs/maze-js.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ntalbs/maze-js/issues"
+  },
+  "homepage": "https://github.com/ntalbs/maze-js#readme"
 }
